# KG-fin-crime

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: check.yml  claude-review.yml
docs/: api.md  build-log.md  calibration.md  data-model.md  methodology.md
schema/: 001_init.sql  002_silver.sql  003_silver_findings.sql  004_gold.sql
src/api/: deps.py  main.py  models.py
src/api/routes/: findings.py
src/assessments/: circular_flow.py  laundering_exposure.py  mule_hub.py
src/bronze/: load.py
src/common/: db.py
src/gold/: publish.py
src/silver/: transform.py
tests/: test_invariants.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/: FindingCard.tsx  FindingDetailPane.tsx  FindingsList.tsx  PipelineHeader.tsx  RingGraph.tsx  SeverityPill.tsx
ui/src/lib/: api.ts  format.ts  types.ts
