[project]
name = "kg-fin-crime"
version = "0.1.0"
description = "Knowledge graph for financial crime — PAI Hackathon 2026. Ports the Prevalent SDS medallion pipeline from cyber to fin-crime."
requires-python = ">=3.10"
dependencies = [
    "psycopg[binary,pool]>=3.2",
    "python-dotenv>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
