[project]
name = "kg-fin-crime"
version = "0.1.0"
description = "Graph-native AML detection on the IBM AMLSim HI-Small dataset. Medallion pipeline (Postgres bronze/silver/gold), three typology detectors, FastAPI + React dashboard."
requires-python = ">=3.10"
dependencies = [
    "psycopg[binary,pool]>=3.2",
    "python-dotenv>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [".venv", "ui"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E501",  # line length — long SQL strings dominate
    "B008",  # FastAPI's `Depends(...)` in argument defaults is idiomatic, not a bug
]
